--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,15 @@
 [config]
 
+; Style Sheet
+style_sheet.type = "select"
+style_sheet.options.label = "Style Sheet"
+style_sheet.options.description = "Choose a style sheet."
+style_sheet.options.multiOptions.spring = "Spring"
+style_sheet.options.multiOptions.summer = "Summer"
+style_sheet.options.multiOptions.autumn = "Autumn"
+style_sheet.options.multiOptions.winter = "Winter"
+style_sheet.options.multiOptions.night = "Night"
+style_sheet.options.value = "winter"
 
 logo.type = "file"
 logo.options.label = "Logo File"
