--- a/config.ini
+++ b/config.ini
@@ -1,16 +1,6 @@
 [config]
 
-; Style Sheet
-style_sheet.type = "select"
-style_sheet.options.label = "Style Sheet"
-style_sheet.options.description = "Choose a style sheet."
-style_sheet.options.multiOptions.spring = "Spring"
-style_sheet.options.multiOptions.summer = "Summer"
-style_sheet.options.multiOptions.autumn = "Autumn"
-style_sheet.options.multiOptions.winter = "Winter"
-style_sheet.options.multiOptions.night = "Night"
-style_sheet.options.value = "winter"
-
+; Logo
 logo.type = "file"
 logo.options.label = "Logo File"
 logo.options.description = "Choose a logo file. This will replace the site title in the header of the theme. Recommended maximum width for the logo is 500px."
