--- a/config.ini
+++ b/config.ini
@@ -7,6 +7,7 @@ logo.options.description = "Choose a logo file. This will replace the site title
 logo.options.validators.count.validator = "Count"
 logo.options.validators.count.options.max = "1"
 
+; Header Background Image
 display_featured_item.type = "checkbox"
 display_featured_item.options.label = "Display Featured Item"
 display_featured_item.options.description = "Check this box if you wish to show the featured item on the homepage."
