cleaning up theme

--- a/theme.ini
+++ b/theme.ini
@@ -1,11 +1,11 @@
 [theme]
 author = "Joseph Anderson"
 title = "AOD"
-description = "Theme for FIT Library's Archive on Demand."
+description = "Theme for FIT Library's Archive on Demand. Works by embeding YouTube videos/thumbnails."
 license = "GPLv3"
 website = "http://omeka.org"
 support_link = "http://omeka.org/forums/forum/themes-and-public-display"
 omeka_minimum_version="2.3"
-omeka_target_version="2.3"
-version="2.3"
+omeka_target_version="2.4"
+version="1.0"
 tags=""
