cleaning up theme

--- a/theme.ini
+++ b/theme.ini
@@ -1,10 +1,10 @@
 [theme]
 author = "Joseph Anderson"
 title = "AOD"
-description = "Theme for FIT Library's Archive on Demand. Works by embeding YouTube videos/thumbnails."
+description = "Theme for FIT Library's Archive on Demand. Works by embedding YouTube videos/thumbnails."
 license = "GPLv3"
 website = "http://omeka.org"
-support_link = "http://omeka.org/forums/forum/themes-and-public-display"
+support_link = "https://github.com/fitnycdigitalinitiatives/AOD/wiki"
 omeka_minimum_version="2.3"
 omeka_target_version="2.4"
 version="1.0"
